# cato

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  ISSUE_FUTURE_DIRECTIONS.md  README.md  cato  checklist.md  config.json  mockup_subtask_progress.html  plan.md  pyproject.toml  pytest.ini
.github/workflows/: claude-code-review.yml  claude.yml  pre-commit.yml  tests.yml  version-gate.yml
backend/: api.py  cost_ingest.py  cost_routes.py  requirements.txt
cato_src/core/: aggregator.py  store.py
dashboard/: .env  index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: board-mockup.html  dag-grouping-options.html
dashboard/src/: App.css  App.tsx  index.css  vite-env.d.ts
dashboard/src/components/: AgentSpendBars.css  AgentSpendBars.tsx  AgentSwimLanesView.css  AgentSwimLanesView.tsx  AnalysisProgress.css  AnalysisProgress.tsx  ArchiveBrowser.css  ArchiveBrowser.tsx  ArtifactPreviewModal.css  ArtifactPreviewModal.tsx  AuditBanner.tsx  BoardView.css  BoardView.tsx  BudgetTab.css  BudgetTab.tsx  ConversationView.css  ConversationView.tsx  CostDashboard.css  CostDashboard.tsx  CostTimeSeries.css  CostTimeSeries.tsx  DecisionImpactView.css  DecisionImpactView.tsx  ExportButton.css  ExportButton.tsx  FailureDiagnosisView.css  FailureDiagnosisView.tsx  FloatingProgressIndicator.css  FloatingProgressIndicator.tsx  HeaderControls.tsx  HealthCheckDashboard.css  HealthCheckDashboard.tsx  HistoricalTab.css  HistoricalTab.tsx  MetricsPanel.css  MetricsPanel.tsx  NetworkGraphView.css  NetworkGraphView.tsx  OperationsPanel.tsx  PricingTab.css  (+28 more)
dashboard/src/data/: mockDataGenerator.ts
dashboard/src/services/: costService.ts  dataService.ts
dashboard/src/store/: visualizationStore.ts
dashboard/src/utils/: timelineUtils.ts
docs/: DASHBOARD.md  DOCKER.md  DOCKER_SETUP.md  INSTALLATION.md  QUICKSTART.md  docker-compose.example.yml
src/core/: aggregator.py  store.py
tests/: test_bundled_design_display.py  test_cato_critical_bugs.py  test_cost_api.py  test_cost_ingest.py  test_digit_prefix_project_id.py  test_historical_api_integration.py  test_multi_path_aggregator.py  test_realtime_log_normalization.py
